footer desktop added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </style>
         <title>Dark style portfolio</title>
     </head> 
-    <body class="w-screen h-full bg-[#101111] overflox-x-hidden mb-[3rem] ">
+    <body class="w-screen h-full bg-[#101111] overflox-x-hidden mb-[3rem] md:mb-[6rem] ">
         <header class="flex md:px-[17.1rem] flex-col gap-[4.7rem] w-[100%] items-center">
             <nav class="flex h-[5rem] mt-[2.5rem] md:mt-[4.6rem]  w-full items-center justify-between ">
                 <!-- logo  -->
@@ -194,96 +194,128 @@
                 </div>
             </div>
         </div>
-        <div class="flex gap-[1.2rem] md:gap-[2.9rem] px-[2.3rem] md:px-[19rem] mt-[3.2rem] md:mt-[15rem] mb-[6.4rem] md:mb-[9.5rem] items-center">
+        <div class="flex gap-[1.2rem] md:gap-[2.9rem] px-[2.3rem] md:px-[19.7rem] mt-[3.2rem] md:mt-[15rem] mb-[6.4rem] md:mb-[9.5rem] items-center">
             <h1 class="text-[white] text-[1.8rem] md:text-[4rem] font-[400] font-(--font-poppins)">Client testimonials</h1>
             <img class="size-[2.23rem] md:size-[3.6rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
         </div>
-        <div class="flex items-center gap-[1.4rem] flex-col">
-            <div class="p-[0.13rem] items-center justify-center w-[33rem] gap-[1.3rem] flex-col bg-linear-to-br from-[#FFD49C]  via-[#7D7AFB] via-[#151515] to-[#151515] rounded-[2rem]">
-                <div class="bg-[#101111] flex-col flex px-[2rem] py-[2.6rem] rounded-[2rem] gap-[2rem]">
+        <div class="flex md:flex-row md:flex-wrap md:w-[70%] items-center md:items-start gap-[1.4rem] md:gap-[5.6rem] md:mx-[19.7rem] md:mb-[21.7rem] flex-col">
+            <div class="p-[0.13rem] justify-center w-[33rem] md:w-[40rem] gap-[1.3rem] flex-col bg-[linear-gradient(to_top_left,#151515,#151515,#151515,#151515,#7D7AFB,#FFD49C,#FFD49C)] rounded-[2rem]">
+                <div class="bg-[#101111] flex-col flex px-[2rem] md:px-[2.4rem] py-[2.6rem] md:py-[3.2rem] rounded-[2rem] gap-[2rem]">
                     <div class="flex justify-between items-center"> 
-                        <div class="flex items-center gap-[0.9rem]">
-                            <div class="rounded-[50%] size-[4rem] bg-[gray]"></div>
+                        <div class="flex items-center gap-[0.9rem] md:gap-[1.2rem]">
+                            <div class="rounded-[50%] size-[4rem] md:size-[4.8rem] bg-[gray]"></div>
                             <div class="flex flex-col justify-between gap-[0.8rem]">
-                                <h1 class="text-[white] [1.35rem] font-[400] font-(--font-poppins)">Client Name .</h1>
-                                <p class="text-[white] [0.99rem] font-[400] font-(--font-poppins)">Product designer</p>
+                                <h1 class="text-[white] text-[1.35rem] md:text-[1.6rem] font-[400] font-(--font-poppins)">Client Name .</h1>
+                                <p class="text-[white] text-[0.99rem] md:text-[1.2rem] font-[400] font-(--font-poppins)">Product designer</p>
                             </div>
                         </div>
-                        <div><img src="assets/images/virgule.svg" alt=""></div>
+                        <div><img class="md:size-[4.3rem]" src="assets/images/virgule.svg" alt="virgule"></div>
                     </div>
-                    <div class="text-[white] text-[1.16rem] font-[400] font-(--font-poppins)">
+                    <div class="text-[white] text-[1.16rem] md:text-[1.4rem] font-[400] font-(--font-poppins)">
                         s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 
                     </div>
                 </div>
             </div>
-            <div class="p-[0.13rem] items-center justify-center w-[33rem] gap-[1.3rem] flex-col bg-linear-to-br from-[#FFD49C]  via-[#7D7AFB] via-[#151515] to-[#151515] rounded-[2rem]">
-                <div class="bg-[#101111] flex-col flex px-[2rem] py-[2.6rem] rounded-[2rem] gap-[2rem]">
+            <div class="p-[0.13rem] justify-center w-[33rem] md:w-[40rem] gap-[1.3rem] flex-col bg-[linear-gradient(to_top_left,#151515,#151515,#151515,#151515,#7D7AFB,#FFD49C,#FFD49C)] rounded-[2rem]">
+                <div class="bg-[#101111] flex-col flex px-[2rem] md:px-[2.4rem] py-[2.6rem] md:py-[3.2rem] rounded-[2rem] gap-[2rem]">
                     <div class="flex justify-between items-center"> 
-                        <div class="flex items-center gap-[0.9rem]">
-                            <div class="rounded-[50%] size-[4rem] bg-[gray]"></div>
+                        <div class="flex items-center gap-[0.9rem] md:gap-[1.2rem]">
+                            <div class="rounded-[50%] size-[4rem] md:size-[4.8rem] bg-[gray]"></div>
                             <div class="flex flex-col justify-between gap-[0.8rem]">
-                                <h1 class="text-[white] [1.35rem] font-[400] font-(--font-poppins)">Client Name .</h1>
-                                <p class="text-[white] [0.99rem] font-[400] font-(--font-poppins)">Product designer</p>
+                                <h1 class="text-[white] text-[1.35rem] md:text-[1.6rem] font-[400] font-(--font-poppins)">Client Name .</h1>
+                                <p class="text-[white] text-[0.99rem] md:text-[1.2rem] font-[400] font-(--font-poppins)">Product designer</p>
                             </div>
                         </div>
-                        <div><img src="assets/images/virgule.svg" alt=""></div>
+                        <div><img class="md:size-[4.3rem]" src="assets/images/virgule.svg" alt="virgule"></div>
                     </div>
-                    <div class="text-[white] text-[1.16rem] font-[400] font-(--font-poppins)">
+                    <div class="text-[white] text-[1.16rem] md:text-[1.4rem] font-[400] font-(--font-poppins)">
                         s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 
                     </div>
                 </div>
             </div>
-            <div class="p-[0.13rem] items-center justify-center w-[33rem] gap-[1.3rem] flex-col bg-linear-to-br from-[#FFD49C]  via-[#7D7AFB] via-[#151515] to-[#151515] rounded-[2rem]">
-                <div class="bg-[#101111] flex-col flex px-[2rem] py-[2.6rem] rounded-[2rem] gap-[2rem]">
+            <div class="p-[0.13rem] justify-center w-[33rem] md:w-[40rem] gap-[1.3rem] flex-col bg-[linear-gradient(to_top_left,#151515,#151515,#151515,#151515,#7D7AFB,#FFD49C,#FFD49C)] rounded-[2rem]">
+                <div class="bg-[#101111] flex-col flex px-[2rem] md:px-[2.4rem] py-[2.6rem] md:py-[3.2rem] rounded-[2rem] gap-[2rem]">
                     <div class="flex justify-between items-center"> 
-                        <div class="flex items-center gap-[0.9rem]">
-                            <div class="rounded-[50%] size-[4rem] bg-[gray]"></div>
+                        <div class="flex items-center gap-[0.9rem] md:gap-[1.2rem]">
+                            <div class="rounded-[50%] size-[4rem] md:size-[4.8rem] bg-[gray]"></div>
                             <div class="flex flex-col justify-between gap-[0.8rem]">
-                                <h1 class="text-[white] [1.35rem] font-[400] font-(--font-poppins)">Client Name .</h1>
-                                <p class="text-[white] [0.99rem] font-[400] font-(--font-poppins)">Product designer</p>
+                                <h1 class="text-[white] text-[1.35rem] md:text-[1.6rem] font-[400] font-(--font-poppins)">Client Name .</h1>
+                                <p class="text-[white] text-[0.99rem] md:text-[1.2rem] font-[400] font-(--font-poppins)">Product designer</p>
                             </div>
                         </div>
-                        <div><img src="assets/images/virgule.svg" alt=""></div>
+                        <div><img class="md:size-[4.3rem]" src="assets/images/virgule.svg" alt="virgule"></div>
                     </div>
-                    <div class="text-[white] text-[1.16rem] font-[400] font-(--font-poppins)">
+                    <div class="text-[white] text-[1.16rem] md:text-[1.4rem] font-[400] font-(--font-poppins)">
+                        s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    </div>
+                </div>
+            </div>
+            <div class="p-[0.13rem] justify-center w-[33rem] md:w-[40rem] gap-[1.3rem] flex-col bg-[linear-gradient(to_top_left,#151515,#151515,#151515,#151515,#7D7AFB,#FFD49C,#FFD49C)] rounded-[2rem]">
+                <div class="bg-[#101111] flex-col flex px-[2rem] md:px-[2.4rem] py-[2.6rem] md:py-[3.2rem] rounded-[2rem] gap-[2rem]">
+                    <div class="flex justify-between items-center"> 
+                        <div class="flex items-center gap-[0.9rem] md:gap-[1.2rem]">
+                            <div class="rounded-[50%] size-[4rem] md:size-[4.8rem] bg-[gray]"></div>
+                            <div class="flex flex-col justify-between gap-[0.8rem]">
+                                <h1 class="text-[white] text-[1.35rem] md:text-[1.6rem] font-[400] font-(--font-poppins)">Client Name .</h1>
+                                <p class="text-[white] text-[0.99rem] md:text-[1.2rem] font-[400] font-(--font-poppins)">Product designer</p>
+                            </div>
+                        </div>
+                        <div><img class="md:size-[4.3rem]" src="assets/images/virgule.svg" alt="virgule"></div>
+                    </div>
+                    <div class="text-[white] text-[1.16rem] md:text-[1.4rem] font-[400] font-(--font-poppins)">
                         s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 
                     </div>
                 </div>
             </div>
         </div>  
-        <div class="flex gap-[1.2rem] px-[2.3rem] mt-[7.2rem] mb-[1.9rem] items-center">
-            <h1 class="text-[white] text-[1.8rem] font-[400] font-(--font-poppins)">Client testimonials</h1>
-            <img class="size-[2.23rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
-        </div>  
-        <div class="flex flex-col gap-[1.5rem] px-[2.7rem]">
-            <p class="text-[white] text-[0.9rem] font-[400] font-(--font-poppins)">Write anything here something about yourself to showcase what actually you doing or targeting etc.</p>
-            <div class="flex items-center w-[10.1rem] p-[0.15rem] rounded-[2rem]" id="borderlinear">
-                <button class="text-[#101111] text-[0.9rem]  px-[1rem] py-[0.5rem] rounded-[2rem] bg-gradient-to-r from-[#7A87FB] to-[#FFD49C] font-[500] font-(--font-poppins)">
-                    Send us a message
-                </button>
+        <div class="flex gap-[1.2rem] md:gap-[2.9rem] px-[2.3rem] md:px-[19.7rem] mt-[3.2rem] md:mt-[30.956rem] mb-[1.2rem] md:mb-[4rem] items-center">
+            <h1 class="text-[white] text-[1.8rem] md:text-[4rem] font-[400] font-(--font-poppins)">Have idea about project?</h1>
+            <img class="size-[2.23rem] md:size-[3.6rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
+        </div> 
+        <div class="flex gap-[8.4rem] items-center relative">
+            <div class="flex flex-col md:px-[19.7rem] gap-[1.5rem] md:gap-[3.6rem] px-[2.7rem]">
+                <p class="text-[white] text-[0.9rem] md:text-[1.6rem] font-[400] font-(--font-poppins)">Write anything here something about yourself to <br> showcase what actually you doing or targeting etc.</p>
+                <div class="flex items-center w-[10.1rem] md:w-[19rem] md:h-[4.3rem] p-[0.15rem] rounded-[2rem] md:rounded-[7.2rem]" id="borderlinear">
+                    <button class="text-[#101111] text-[0.9rem] md:text-[1.6rem] px-[1rem] md:px-[2.4rem] py-[0.5rem] md:py-[0.6rem] rounded-[2rem] md:rounded-[7.2rem] bg-gradient-to-r from-[#7A87FB] to-[#FFD49C] font-[500] font-(--font-poppins)">
+                        Send us a message
+                    </button>
+                </div>
             </div>
+            <div class="hidden md:flex absolute bottom-[-2rem] left-[85.1rem] "><img src="assets/images/grille.svg" alt="grille"></div>
         </div>
         <!-- footer -->
-        <div class="flex px-[5rem] mt-[9rem] flex-col gap-[2rem]">
-            <div class="flex items-center justify-center p-[0.15rem] rounded-[2rem]" id="borderlinear" >
-                <div class="flex items-center justify-between p-[0.15rem] rounded-[2rem] bg-[#1C1C1C] w-[100%]">
-                    <div class="flex px-[1rem] py-[0.6rem] rounded-[3rem] bg-[#292929]">
-                        <img src="assets/images/x.svg" alt="x">
+        <div class="flex px-[5rem] md:px-[19.7rem] mt-[9rem] md:mt-[14rem] flex-col md:flex-row-reverse md:justify-between gap-[2rem]">
+            <div class="flex max-md:hidden items-center">
+                <div class="flex items-center justify-center p-[0.1rem] h-[4.2rem]  rounded-[4rem]" id="borderlinear">
+                    <button class="text-[#101111] text-[0.9rem] text-[1.6rem] w-[10.3rem] h-[4rem] rounded-[4rem] bg-gradient-to-r from-[#7A87FB] to-[#FFD49C] font-[500] font-(--font-poppins)">
+                        Hire me
+                    </button>
+                </div> 
+                <div class="flex items-center justify-center p-[0.1rem] size-[4rem] rounded-[50%]" id="borderlinear">
+                    <button class="text-[#101111] flex items-center justify-center size-[3.9rem] text-[0.9rem] rounded-[50%] bg-gradient-to-r from-[#7A87FB] to-[#FFD49C] font-[500] font-(--font-poppins)">
+                        <img class="size-[2rem]" src="assets/images/user.svg" alt="user logo">
+                    </button>
+                </div>
+              </div>
+            <div class="flex items-center md:w-[36.6rem] md:h-[4.8rem] md:rounded-[7.2rem] justify-center p-[0.15rem] rounded-[2rem]" id="borderlinear" >
+                <div class="flex items-center justify-between p-[0.15rem] md:p-[0.6rem] rounded-[2rem] md:h-[4.6rem] md:rounded-[7.2rem]  bg-[#1C1C1C] w-[100%]">
+                    <div class="flex px-[1rem] md:px-[1.6rem] py-[0.6rem] md:py-[0.8rem] rounded-[3rem] bg-[#292929]">
+                        <img class="md:size-[2rem]" src="assets/images/x.svg" alt="x">
                     </div>
-                    <div class="flex px-[1rem] py-[0.6rem] rounded-[3rem] bg-[#292929]">
-                        <img src="assets/images/dribble.svg" alt="x">
+                    <div class="flex px-[1rem] md:px-[1.6rem] py-[0.6rem] md:py-[0.8rem] rounded-[3rem] bg-[#292929]">
+                        <img class="md:size-[2rem]" src="assets/images/dribble.svg" alt="dribble">
                     </div>
-                    <div class="flex px-[1rem] py-[0.6rem] rounded-[3rem] bg-[#292929]">
-                        <img src="assets/images/insta.svg" alt="x">
+                    <div class="flex px-[1rem] md:px-[1.6rem] py-[0.6rem] md:py-[0.8rem] rounded-[3rem] bg-[#292929]">
+                        <img class="md:size-[2rem]" src="assets/images/insta.svg" alt="insta">
                     </div>
-                    <div class="flex px-[1rem] py-[0.6rem] rounded-[3rem] bg-[#292929]">
-                        <img src="assets/images/facebook.svg" alt="x">
+                    <div class="flex px-[1rem] md:px-[1.6rem] py-[0.6rem] md:py-[0.8rem] rounded-[3rem] bg-[#292929]">
+                        <img class="md:size-[2rem]" src="assets/images/facebook.svg" alt="facebook">
                     </div>
                 </div>    
             </div>
-            <div class="flex gap-[0.9rem]">
-                <img class="size-[3.322rem]" src="assets/images/logo.svg" alt="logo">
-                <span class="text-[white] text-[1.812rem] font-[400] font-(--font-poppins)">znisa</span>
+            <div class="flex gap-[0.9rem] md:gap-[1.2rem]">
+                <img class="size-[3.322rem] md:size-[4.4rem]" src="assets/images/logo.svg" alt="logo">
+                <span class="text-[white] text-[1.812rem] md:text-[2.4rem] font-[400] font-(--font-poppins)">znisa</span>
             </div>
         </div>
     </body>
