--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head> 
     <body class="w-screen h-full bg-[#101111] overflox-x-hidden mb-[3rem] md:mb-[6rem] ">
         <header class="flex md:px-[17.1rem] flex-col gap-[4.7rem] w-[100%] items-center">
-            <nav class="flex h-[5rem] mt-[2.5rem] md:mt-[4.6rem]  w-full items-center justify-between ">
+            <nav class="flex h-[5rem] mt-[2.5rem] md:mt-[4.6rem] px-[2.2rem]  w-full items-center justify-between ">
                 <!-- logo  -->
                 <div class="flex gap-[0.9rem] md:gap-[1.2rem] cursor=pointer">
                     <img class="size-[3.322rem] md:size-[4.4rem]" src="assets/images/logo.svg" alt="logo">
@@ -72,7 +72,7 @@
                 <div class="border-t-[0.055rem] md:border-r-[0.055rem] md:border-b-[0.055rem] border-[#FFFFFF33] flex items-center justify-center text-[white]"></div>
                 <div class="border-t-[0.055rem] md:border-b-[0.055rem] md:border-r-[0.055rem] gap-[0.6rem] border-[#FFFFFF33] flex flex-col items-center justify-center text-[white] row-span-3 col-span-4 md:row-span-1 md:col-span-1">
                     <h1 class="text-[white] md:hidden text-[1.812rem] font-[400] font-(--font-poppins)">I design and build clean websites</h1>
-                    <p class="text-[white] md:hidden text-[0.9rem] text-center w-[60%] font-[400] font-(--font-poppins)">Je suis <b>"leonel NGUEAGHO"</b> , développeur web. À travers des codes élégants et des solutions innovantes, je crée des interfaces intuitifs et des plateformes performantes à la demande.</p>
+                    <p class="text-[white] md:hidden text-[0.9rem] text-center max-md:text-justify w-[60%] font-[400] font-(--font-poppins)">Je suis <b>"leonel NGUEAGHO"</b> , développeur web. À travers des codes élégants et des solutions innovantes, je crée des interfaces intuitifs et des plateformes performantes à la demande.</p>
                     <div class="flex items-center md:hidden justify-center p-[0.15rem] rounded-[2rem]" id="borderlinear">
                         <button class="text-[#101111] hover:text-[white] text-[0.9rem] w-[6.4rem] h-[2.3rem] rounded-[2rem] bg-gradient-to-r from-[#7A87FB] to-[#FFD49C] font-[500] font-(--font-poppins)">
                             Hire me
@@ -132,7 +132,7 @@
                 <h1 class="text-[white] text-[1.8rem] md:text-[4rem] font-[400] font-(--font-poppins)">My process to design</h1>
                 <img class="size-[2.23rem] md:size-[3.6rem] " src="assets/images/doubleetoile.svg" alt="doubleetoile">
             </div>
-            <div class="flex flex-col gap-[0.8rem] md:gap-[4rem] text-[white]">
+            <div class="flex flex-col gap-[0.8rem] md:gap-[4rem] text-[white] max-md:pr-[0.9rem]">
                 <div class="flex gap-[2.833rem] md:gap-[6.4rem] items-start">
                     <div class="flex flex-col items-center gap-[0.8rem] md:gap-[2rem]">
                         <span class="size-[2.4rem] md:size-[5.6rem] flex items-center justify-center rounded-[50%] border-[0.1rem] md:text-[2.2rem] border-[white]" >1</span>
